# poker-eval

./: CMakeLists.txt  Makefile  Makefile.bak  README  README.md  aclocal.m4  arm64-toolchain.cmake  build.sh  config.status  configure  configure.ac  configure~  libtool
.github/workflows/: ci.yaml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2  traces.3
bindings/c++/test/: OmahaEquityTest.cpp
bindings/cython/python/: Readme.md  pokereval.pyx  pokereval_wrapper.c  pokereval_wrapper.h  pyproject.toml  pytest_test_rand_int_sum_abs.py  setup.py  test.py  test2.py  test_old.py  unitary_tests.py  unitary_tests_holdem.py  unitary_tests_low27.py  unitary_tests_lows.py  unitary_tests_omaha.py  unitary_tests_omaha_low.py
bindings/cython/python/pokereval/: pokereval.c  pokereval.pyx  pokereval_wrapper.h  pytest_test_rand_int_chi_square.py  test.py  test2.py  test_old.py  unitary_test_omaha5_6.py  unitary_tests_low27.py
bindings/python/: CMakeLists.txt  README.md
examples/: Makefile  Makefile.am  eval  fish  five_card_hands  five_card_hands.c  getopt_w32.c  getopt_w32.h  hcmp2  hcmpn  output.json  pokenum  pokenum.c  pokenum.py  pokenum.pyx  pokenum2.py  pokenum_c.pxd   seven_card_hands  test.py  test_pokenum.sh  usedecks  usedecks.c
examples/.deps/: eval-eval.Po  fish-fish.Po  five_card_hands-five_card_hands.Po  hcmp2-hcmp2.Po  hcmpn-hcmpn.Po  pokenum-pokenum.Po  seven_card_hands-seven_card_hands.Po  usedecks-usedecks.Po
examples/.libs/: eval  fish  five_card_hands  hcmp2  hcmpn  pokenum  seven_card_hands  usedecks
include/: Card.h  CardConverter.h  HandDistributions.h  HoldemAgnosticHand.h  deck_short.h  enumdefs.h  enumord.h  game_std.h  pokereval_export.h
lib/: Card.c  CardConverter.c  HoldemAgnosticHand.c  Makefile  enumerate.c  evx_gen5  evx_gen7  evx_generate.c  mktab_astud  mktab_basic  mktab_evx  mktab_joker  mktab_lowball  mktab_packed
lib/.deps/: evx_gen5-evx_generate.Po  evx_gen7-evx_generate.Po  libpoker_eval_la-combinations.Plo  libpoker_eval_la-deck.Plo  libpoker_eval_la-deck_astud.Plo  libpoker_eval_la-deck_joker.Plo  libpoker_eval_la-deck_std.Plo  libpoker_eval_la-enumerate.Plo  libpoker_eval_la-enumord.Plo  libpoker_eval_la-evx.Plo  libpoker_eval_la-lowball.Plo  libpoker_eval_la-poker_wrapper.Plo  libpoker_eval_la-rules_astud.Plo  libpoker_eval_la-rules_joker.Plo  libpoker_eval_la-rules_std.Plo  libpoker_eval_la-t_astudcardmasks.Plo  libpoker_eval_la-t_botcard.Plo  libpoker_eval_la-t_botfivecards.Plo  libpoker_eval_la-t_botfivecardsj.Plo  libpoker_eval_la-t_cardmasks.Plo  libpoker_eval_la-t_evx_flushcards.Plo  libpoker_eval_la-t_evx_pairval.Plo  libpoker_eval_la-t_evx_strval.Plo  libpoker_eval_la-t_evx_tripsval.Plo  libpoker_eval_la-t_jokercardmasks.Plo  libpoker_eval_la-t_jokerstraight.Plo  libpoker_eval_la-t_maskrank.Plo  libpoker_eval_la-t_nbits.Plo  libpoker_eval_la-t_nbitsandstr.Plo  libpoker_eval_la-t_straight.Plo  libpoker_eval_la-t_topbit.Plo  libpoker_eval_la-t_topcard.Plo  libpoker_eval_la-t_topfivebits.Plo  libpoker_eval_la-t_topfivecards.Plo  libpoker_eval_la-t_toptwobits.Plo  mktab_astud.Po  mktab_basic.Po  mktab_evx.Po  mktab_joker.Po  mktab_lowball.Po  (+3 more)
lib/.libs/: libpoker-eval.lai
tests/: Makefile  Makefile.am  shortdecktest.c  test_card.c  test_cardconverter.c  test_handagnostichand.c
